samples/_failures_safe/1761409805_56da31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19d5d95d.c: In function ‘main’:
./samples/SAFE/__tmp_19d5d95d.c:144:16: error: missing terminating " character
  144 |         printf("Cannot
      |                ^~~~~~~
./samples/SAFE/__tmp_19d5d95d.c:144:9: error: expected expression at end of input
  144 |         printf("Cannot
      |         ^~~~~~
./samples/SAFE/__tmp_19d5d95d.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_19d5d95d.c:144:9: error: expected declaration or statement at end of input
